--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	body{
 		margin:0;
 		overflow: hidden;
+                height:100vh;
+                width:100vw;
 	}
 	.box{
 		width: 400px;
