--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	.box{
 		width: 400px;
 		padding: 20px;
-		opacity: 0.5;
+		opacity: 0;
 		position: absolute;
 		top: 50%;
 		left:50%;
@@ -35,8 +35,8 @@
 		font-size: 25px;
 	}
 	#moving_bg{
-		width:100vw;
-		height: 100vh;
+		width:200%;
+		height: 200%;
 		background-color: #000;
 		position: relative absolute;
 		overflow: hidden;
